Aula01 - Carregando aluno no formulário

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.FormularioAlunoActivity" />
+        <activity android:name=".ui.activity.FormularioAlunoActivity"
+            android:parentActivityName=".ui.activity.ListaAlunosActivity"/>
     </application>
 
 </manifest>
